--- a/src/Core/CoreLib/CoreLib.csproj
+++ b/src/Core/CoreLib/CoreLib.csproj
@@ -29,7 +29,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\..\bin\Debug\mscorlib.xml</DocumentationFile>
     <NoWarn>1591, 0661, 0660</NoWarn>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -38,7 +38,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <NoWarn>1591, 0661, 0660</NoWarn>
     <DocumentationFile>..\..\..\bin\Release\mscorlib.xml</DocumentationFile>
   </PropertyGroup>
